# caf.toolkit

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  README.md  RELEASE.md  pyproject.toml  requirements.txt  requirements_app.txt  requirements_dash.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: black.yml  build.yml  coverage.yml  documentation-links.yml  isort.yml  linting.yml  osv-scan.yml  pyodbc.yml  release.yml  sphinx.yml  tests.yml  typing.yml
caf/toolkit/: __init__.py  _version.py
caf/toolkit/pandas_utils/: __init__.py  df_handling.py
docs/: array_utils.rst  concurrency.rst  conf.py  config_base.rst  cost_utils.rst  df_handling.rst  index.rst  io.rst  iterative_proportional_fitting.rst  log_helpers.rst  math_utils.rst  multiprocessing_wrapper.rst  numpy_conversions.rst  pandas_utils.rst  requirements.txt  timing.rst  toolbox.rst  tqdm_utils.rst  translation.rst  utility.rst  validators.rst  wide_df_handling.rst
docs/source/: .gitignore  api.rst  conf.py  index.rst  start.rst  tool_usage.rst  tutorial.rst  user_guide.rst
docs/source/_static/css/: logo.css
docs/source/_templates/autosummary/: class.rst
docs/source/usage/: index.rst  matrix-translate.rst  translate.rst
docs/sphinx/source/: caf.rst  caf.toolkit.concurrency.rst  caf.toolkit.pandas_utils.rst  caf.toolkit.rst  conf.py  index.rst  modules.rst
examples/: GALLERY_HEADER.rst  basic_config.yml  nested_config.yml  run_config.py  validated_config.yml
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
src/caf/toolkit/: __init__.py  __main__.py  _version.py  arguments.py  array_utils.py  config_base.py  cost_utils.py  io.py  iterative_proportional_fitting.py  log_helpers.py  math_utils.py  timing.py  toolbox.py  tqdm_utils.py  translation.py  validators.py
src/caf/toolkit/app/: __init__.py  __main__.py  _auth.py  _db.py  _main.py  _translate.py  schema.sql
src/caf/toolkit/app/pages/: home.py  matrix_translate.py  translate.py
src/caf/toolkit/app/templates/: base.html  index.html
src/caf/toolkit/app/templates/auth/: login.html  register.html
src/caf/toolkit/app/templates/translate/: translate.html
src/caf/toolkit/concurrency/: __init__.py  multiprocessing.py  multiprocessing_wrapper.py
src/caf/toolkit/core/: __init__.py  _internal_utils.py  types.py
src/caf/toolkit/pandas_utils/: __init__.py  build.py  df_handling.py  matrices.py  matrix_df_tools.py  numpy_conversions.py  random.py  sql_handling.py  utility.py  wide_df_handling.py
src/scripts/: parse_log.py
tests/: conftest.py  test_arguments.py  test_array_utils.py  test_config_base.py  test_cost_utils.py  test_io.py  test_iterative_proportional_fitting.py  test_log_helpers.py  test_main.py  test_math_utils.py  test_sql_handling.py  test_timing.py  test_toolbox.py  test_translation.py
tests/concurrency/: test_multiprocessing.py
tests/data/: expected_simple.csv
tests/pandas_utils/: test_df_handling.py  test_matrices.py  test_numpy_conversions.py  test_random.py  test_wide_df_handling.py
