[build-system]
requires = ["setuptools", "versioneer-518"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 95

[tool.pylint.messages_control]
disable = [
    "line-too-long",    # Compatibility with black
    "too-many-lines",
    "use-dict-literal",
    "use-list-literal",
]

# Pylint settings
[tool.pylint.basic]
good-names = ["df", "ca", "tp", "to", "x", "i", "f", "q"]

[tool.pylint.main]
ignore = ["ignore_me.py", "__init__.py", "_version.py", "versioneer.py"]

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-statements = 100

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "my_namespace.slapping._version",
]
ignore_errors  = true

[tool.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
addopts = "--cov=caf.toolkit"
