[metadata]
description = Transport for the North's Model Integration Tool's Utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Transport-for-the-North/MITs-Utils
author = Transport for the North
maintainer = Ben Taylor
license = GPL-3.0
license_files = LICENSE

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
include = mits_utils, mits_utils.*

[versioneer]
VCS = git
style = pep440-post-branch
versionfile_source = mits_utils/_version.py
versionfile_build = mits_utils/_version.py
tag_prefix = v
