[metadata]
description =  A toolkit of transport planning and appraisal functionalities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Transport-for-the-North/caf.toolkit
author = Transport for the North
maintainer = Ben Taylor
license = GPL-3.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
project_urls =
      Bug Tracker = https://github.com/Transport-for-the-North/caf.toolkit/issues
      Source = https://github.com/Transport-for-the-North/caf.toolkit

[options]
namespace_packages = caf
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.19.0
    pandas>=1.4.0

[options.packages.find]
include = src.caf.toolkit, src.caf.toolkit.*

[versioneer]
VCS = git
style = pep440-post
versionfile_source = src/caf/toolkit/_version.py
versionfile_build = src/caf/toolkit/_version.py
tag_prefix = v